--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "automatic image captioning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMBQ+hEgoYegN4jmXeUGwhn",
+      "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
+      "authorship_tag": "ABX9TyOAV7QoO5ca5e+0d/7jI2oo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,6 +32,104 @@
       "cell_type": "code",
       "metadata": {
         "id": "VrCo3U4FEO3d"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "38K5iYKnFX3f"
+      },
+      "source": [
+        "# New Section"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "OUE3kcAuFdUw",
+        "outputId": "bcc4e8a3-c76f-411f-e4a0-24a33c74590c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Mounted at /content/drive\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "YkA5sg83GCrU"
+      },
+      "source": [
+        "import numpy as np\n",
+        "from numpy import array\n",
+        "import pandas as pd\n",
+        "import matplotlib.pyplot as plt"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WqWzXG6WHd8w",
+        "outputId": "6e6351dc-09c1-4076-c1ff-d847750b5aba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# load doc into memory\n",
+        "def load_doc(filename):\n",
+        "\t# open the file as read only\n",
+        "\tfile = open(filename, 'r')\n",
+        "\t# read all text\n",
+        "\ttext = file.read()\n",
+        "\t# close the file\n",
+        "\tfile.close()\n",
+        "\treturn text\n",
+        "\n",
+        "filename = \"/content/drive/MyDrive/Image Captioning/captions.txt\"\n",
+        "# load descriptions\n",
+        "doc = load_doc(filename)\n",
+        "print(doc[:300])"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "image,caption\n",
+            "1000268201_693b08cb0e.jpg,A child in a pink dress is climbing up a set of stairs in an entry way .\n",
+            "1000268201_693b08cb0e.jpg,A girl going into a wooden building .\n",
+            "1000268201_693b08cb0e.jpg,A little girl climbing into a wooden playhouse .\n",
+            "1000268201_693b08cb0e.jpg,A little girl climbing\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kIJKt0YNI2Fk"
       },
       "source": [
         ""
