load_description function created

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -6,7 +6,7 @@
       "name": "automatic image captioning.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
-      "authorship_tag": "ABX9TyN6cSbLUOif4eiPFbjb5fB0",
+      "authorship_tag": "ABX9TyMRe7Mjg3DQFcpbxsj6zGsS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,17 +31,17 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "OUE3kcAuFdUw",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "OUE3kcAuFdUw",
         "outputId": "bcc4e8a3-c76f-411f-e4a0-24a33c74590c"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -63,16 +63,16 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
+        "id": "WqWzXG6WHd8w",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "id": "WqWzXG6WHd8w",
         "outputId": "6e6351dc-09c1-4076-c1ff-d847750b5aba"
       },
       "source": [
@@ -91,7 +91,7 @@
         "doc = load_doc(filename)\n",
         "print(doc[:300])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,13 +109,47 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kIJKt0YNI2Fk"
+        "id": "JOCu-2iXP-zk",
+        "outputId": "ea3f8ae3-df01-4062-da25-f29daab29491",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        ""
+        "def load_descriptions(doc):\n",
+        "\tmapping = dict()\n",
+        "\t# process lines\n",
+        "\tfor line in doc.split('\\n'):\n",
+        "\t\t# split line by white space\n",
+        "\t\ttokens = line.split(',')\n",
+        "\t\t\n",
+        "\t\t# take the first token as the image id, the rest as the description\n",
+        "\t\timage_id, image_desc = tokens[0], tokens[1:]\n",
+        "\t\t# extract filename from image id\n",
+        "\t\timage_id = image_id.split('.')[0]\n",
+        "\t\t# convert description tokens back to string\n",
+        "\t\timage_desc = ' '.join(image_desc)\n",
+        "\t\t# create the list if needed\n",
+        "\t\tif image_id not in mapping:\n",
+        "\t\t\tmapping[image_id] = list()\n",
+        "\t\t# store description\n",
+        "\t\tmapping[image_id].append(image_desc)\n",
+        "\treturn mapping\n",
+        "\n",
+        "# parse descriptions\n",
+        "descriptions = load_descriptions(doc)\n",
+        "print('Loaded: %d ' % len(descriptions))"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Loaded: 8093 \n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
