Varifying the description map

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -6,7 +6,7 @@
       "name": "automatic image captioning.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
-      "authorship_tag": "ABX9TyMRe7Mjg3DQFcpbxsj6zGsS",
+      "authorship_tag": "ABX9TyNF60gl8e8KN2X+XJjjfTJZ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -109,11 +109,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JOCu-2iXP-zk",
-        "outputId": "ea3f8ae3-df01-4062-da25-f29daab29491",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "JOCu-2iXP-zk",
+        "outputId": "ea3f8ae3-df01-4062-da25-f29daab29491"
       },
       "source": [
         "def load_descriptions(doc):\n",
@@ -148,6 +148,70 @@
             "Loaded: 8093 \n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pnHp9uOIUUv1",
+        "outputId": "7f5334fe-56f9-47d6-b970-bcb179cc1610",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "list(descriptions.keys())[10:15]\n"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['1015584366_dfcec3c85a',\n",
+              " '101654506_8eb26cfb60',\n",
+              " '101669240_b2d3e7f17b',\n",
+              " '1016887272_03199f49c4',\n",
+              " '1019077836_6fc9b15408']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9oybSKGiVAGL",
+        "outputId": "2f7f6d0d-3595-426f-abda-f934ab645cdb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "descriptions['101654506_8eb26cfb60']"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['A brown and white dog is running through the snow .',\n",
+              " 'A dog is running in the snow',\n",
+              " 'A dog running through snow .',\n",
+              " 'a white and brown dog is running through a snow covered field .',\n",
+              " 'The white and brown dog is running over the surface of the snow .']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
         }
       ]
     }
