function for cleaning description created

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -6,7 +6,7 @@
       "name": "automatic image captioning.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
-      "authorship_tag": "ABX9TyNF60gl8e8KN2X+XJjjfTJZ",
+      "authorship_tag": "ABX9TyNu7EFllv4qTat5fO+NBACl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -154,11 +154,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pnHp9uOIUUv1",
-        "outputId": "7f5334fe-56f9-47d6-b970-bcb179cc1610",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "pnHp9uOIUUv1",
+        "outputId": "7f5334fe-56f9-47d6-b970-bcb179cc1610"
       },
       "source": [
         "list(descriptions.keys())[10:15]\n"
@@ -186,11 +186,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "9oybSKGiVAGL",
-        "outputId": "2f7f6d0d-3595-426f-abda-f934ab645cdb",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9oybSKGiVAGL",
+        "outputId": "2f7f6d0d-3595-426f-abda-f934ab645cdb"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
@@ -214,6 +214,38 @@
           "execution_count": 15
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6-02vbamVQqb"
+      },
+      "source": [
+        "import string\n",
+        "def clean_descriptions(descriptions):\n",
+        "\t# prepare translation table for removing punctuation\n",
+        "\ttable = str.maketrans('', '', string.punctuation)\n",
+        "\tfor key, desc_list in descriptions.items():\n",
+        "\t\tfor i in range(len(desc_list)):\n",
+        "\t\t\tdesc = desc_list[i]\n",
+        "\t\t\t# tokenize\n",
+        "\t\t\tdesc = desc.split()\n",
+        "\t\t\t# convert to lower case\n",
+        "\t\t\tdesc = [word.lower() for word in desc]\n",
+        "\t\t\t# remove punctuation from each token\n",
+        "\t\t\tdesc = [w.translate(table) for w in desc]\n",
+        "\t\t\t# remove hanging words like 'a'\n",
+        "\t\t\tdesc = [word for word in desc if len(word)>1]\n",
+        "\t\t\t# remove tokens with numbers in them\n",
+        "\t\t\tdesc = [word for word in desc if word.isalpha()]\n",
+        "\t\t\t# store as string\n",
+        "\t\t\tdesc_list[i] =  ' '.join(desc)\n",
+        "\n",
+        "# clean descriptions\n",
+        "clean_descriptions(descriptions)"
+      ],
+      "execution_count": 19,
+      "outputs": []
     }
   ]
 }
