function for converting description for vocabulary of words

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -6,7 +6,7 @@
       "name": "automatic image captioning.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
-      "authorship_tag": "ABX9TyNu7EFllv4qTat5fO+NBACl",
+      "authorship_tag": "ABX9TyPPX3l1Odg6sUoN0qM/DRMr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,18 +35,18 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "bcc4e8a3-c76f-411f-e4a0-24a33c74590c"
+        "outputId": "885aaaf2-f9aa-49f6-f6cd-e131ad50a520"
       },
       "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ],
           "name": "stdout"
         }
@@ -63,7 +63,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -73,10 +73,10 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6e6351dc-09c1-4076-c1ff-d847750b5aba"
+        "outputId": "57be0d87-67f9-4856-b150-a4054a325a49"
       },
       "source": [
-        "# load doc into memory\n",
+        "# loading doc into memory\n",
         "def load_doc(filename):\n",
         "\t# open the file as read only\n",
         "\tfile = open(filename, 'r')\n",
@@ -87,11 +87,11 @@
         "\treturn text\n",
         "\n",
         "filename = \"/content/drive/MyDrive/Image Captioning/captions.txt\"\n",
-        "# load descriptions\n",
+        "# loading descriptions\n",
         "doc = load_doc(filename)\n",
         "print(doc[:300])"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -113,34 +113,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JOCu-2iXP-zk",
-        "outputId": "ea3f8ae3-df01-4062-da25-f29daab29491"
+        "outputId": "bd5de999-553e-4535-d3d0-04d3dde1f23c"
       },
       "source": [
         "def load_descriptions(doc):\n",
         "\tmapping = dict()\n",
-        "\t# process lines\n",
+        "\t# processing lines\n",
         "\tfor line in doc.split('\\n'):\n",
-        "\t\t# split line by white space\n",
+        "\t\t# spliting line by white space\n",
         "\t\ttokens = line.split(',')\n",
         "\t\t\n",
-        "\t\t# take the first token as the image id, the rest as the description\n",
+        "\t\t# taking the first token as the image id, the rest as the description\n",
         "\t\timage_id, image_desc = tokens[0], tokens[1:]\n",
-        "\t\t# extract filename from image id\n",
+        "\t\t# extracting filename from image id\n",
         "\t\timage_id = image_id.split('.')[0]\n",
-        "\t\t# convert description tokens back to string\n",
+        "\t\t# converting description tokens back to string\n",
         "\t\timage_desc = ' '.join(image_desc)\n",
-        "\t\t# create the list if needed\n",
+        "\t\t# creating the list if needed\n",
         "\t\tif image_id not in mapping:\n",
         "\t\t\tmapping[image_id] = list()\n",
-        "\t\t# store description\n",
+        "\t\t# storing description\n",
         "\t\tmapping[image_id].append(image_desc)\n",
         "\treturn mapping\n",
         "\n",
-        "# parse descriptions\n",
+        "# parsing descriptions\n",
         "descriptions = load_descriptions(doc)\n",
         "print('Loaded: %d ' % len(descriptions))"
       ],
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,12 +158,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pnHp9uOIUUv1",
-        "outputId": "7f5334fe-56f9-47d6-b970-bcb179cc1610"
+        "outputId": "c883f763-1aef-429b-b961-4dbc34f6e0c8"
       },
       "source": [
         "list(descriptions.keys())[10:15]\n"
       ],
-      "execution_count": 14,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -179,7 +179,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 14
+          "execution_count": 7
         }
       ]
     },
@@ -190,12 +190,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9oybSKGiVAGL",
-        "outputId": "2f7f6d0d-3595-426f-abda-f934ab645cdb"
+        "outputId": "27d4a14d-8113-4910-c0ad-aaec49dfe9ad"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
       ],
-      "execution_count": 15,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +211,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 8
         }
       ]
     },
@@ -223,28 +223,104 @@
       "source": [
         "import string\n",
         "def clean_descriptions(descriptions):\n",
-        "\t# prepare translation table for removing punctuation\n",
+        "\t# preparing translation table for removing punctuation\n",
         "\ttable = str.maketrans('', '', string.punctuation)\n",
         "\tfor key, desc_list in descriptions.items():\n",
         "\t\tfor i in range(len(desc_list)):\n",
         "\t\t\tdesc = desc_list[i]\n",
-        "\t\t\t# tokenize\n",
+        "\t\t\t# tokenizing\n",
         "\t\t\tdesc = desc.split()\n",
-        "\t\t\t# convert to lower case\n",
+        "\t\t\t# converting to lower case\n",
         "\t\t\tdesc = [word.lower() for word in desc]\n",
-        "\t\t\t# remove punctuation from each token\n",
+        "\t\t\t# removing punctuation from each token\n",
         "\t\t\tdesc = [w.translate(table) for w in desc]\n",
-        "\t\t\t# remove hanging words like 'a'\n",
+        "\t\t\t# removing hanging words like 'a'\n",
         "\t\t\tdesc = [word for word in desc if len(word)>1]\n",
-        "\t\t\t# remove tokens with numbers in them\n",
+        "\t\t\t# removing tokens with numbers in them\n",
         "\t\t\tdesc = [word for word in desc if word.isalpha()]\n",
-        "\t\t\t# store as string\n",
+        "\t\t\t# storing as string\n",
         "\t\t\tdesc_list[i] =  ' '.join(desc)\n",
         "\n",
-        "# clean descriptions\n",
+        "# cleaning descriptions\n",
         "clean_descriptions(descriptions)"
       ],
-      "execution_count": 19,
+      "execution_count": 9,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yjgJ7T1oqRTI",
+        "outputId": "3131aaa7-fbea-40f3-b5fc-353e91993399",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "descriptions['101654506_8eb26cfb60']"
+      ],
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['brown and white dog is running through the snow',\n",
+              " 'dog is running in the snow',\n",
+              " 'dog running through snow',\n",
+              " 'white and brown dog is running through snow covered field',\n",
+              " 'the white and brown dog is running over the surface of the snow']"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jr6avM0baElj",
+        "outputId": "442ac908-2bab-4588-e5ec-6119bd7ade07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# converting the loaded descriptions into a vocabulary of words\n",
+        "def to_vocabulary(descriptions):\n",
+        "\t# building a list of all description strings\n",
+        "\tall_desc = set()\n",
+        "\tfor key in descriptions.keys():\n",
+        "\t\t[all_desc.update(d.split()) for d in descriptions[key]]\n",
+        "\treturn all_desc\n",
+        "\n",
+        "# summarizing vocabulary\n",
+        "vocabulary = to_vocabulary(descriptions)\n",
+        "print('Original Vocabulary len: %d' % len(vocabulary))"
+      ],
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Original Vocabulary len: 8764\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dogLwwKAqmmx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 13,
       "outputs": []
     }
   ]
