--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -6,7 +6,7 @@
       "name": "automatic image captioning.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
-      "authorship_tag": "ABX9TyPPX3l1Odg6sUoN0qM/DRMr",
+      "authorship_tag": "ABX9TyOcXMbBWVdKvQCWCkq8StRW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -250,11 +250,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "yjgJ7T1oqRTI",
-        "outputId": "3131aaa7-fbea-40f3-b5fc-353e91993399",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "yjgJ7T1oqRTI",
+        "outputId": "3131aaa7-fbea-40f3-b5fc-353e91993399"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
@@ -282,11 +282,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jr6avM0baElj",
-        "outputId": "442ac908-2bab-4588-e5ec-6119bd7ade07",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jr6avM0baElj",
+        "outputId": "442ac908-2bab-4588-e5ec-6119bd7ade07"
       },
       "source": [
         "# converting the loaded descriptions into a vocabulary of words\n",
@@ -318,9 +318,20 @@
         "id": "dogLwwKAqmmx"
       },
       "source": [
-        ""
+        "# saving descriptions to file, one per line\n",
+        "def save_descriptions(descriptions, filename):\n",
+        "\tlines = list()\n",
+        "\tfor key, desc_list in descriptions.items():\n",
+        "\t\tfor desc in desc_list:\n",
+        "\t\t\tlines.append(key + ' ' + desc)\n",
+        "\tdata = '\\n'.join(lines)\n",
+        "\tfile = open(filename, 'w')\n",
+        "\tfile.write(data)\n",
+        "\tfile.close()\n",
+        "\n",
+        "save_descriptions(descriptions, 'descriptions.txt')"
       ],
-      "execution_count": 13,
+      "execution_count": 14,
       "outputs": []
     }
   ]
