loaded training data by creating function

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "automatic image captioning.ipynb",
       "provenance": [],
-      "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
-      "authorship_tag": "ABX9TyOcXMbBWVdKvQCWCkq8StRW",
+      "authorship_tag": "ABX9TyPZzz83EmGs6FbmgiB/gNZJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +34,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "885aaaf2-f9aa-49f6-f6cd-e131ad50a520"
+        "outputId": "a0bf52e8-e528-418f-c19d-3daf8e71934c"
       },
       "source": [
         "from google.colab import drive\n",
@@ -46,7 +45,7 @@
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
+            "Mounted at /content/drive\n"
           ],
           "name": "stdout"
         }
@@ -63,7 +62,7 @@
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt"
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -73,7 +72,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "57be0d87-67f9-4856-b150-a4054a325a49"
+        "outputId": "521ba9f3-4615-454c-c184-13d0d74da133"
       },
       "source": [
         "# loading doc into memory\n",
@@ -86,21 +85,20 @@
         "\tfile.close()\n",
         "\treturn text\n",
         "\n",
-        "filename = \"/content/drive/MyDrive/Image Captioning/captions.txt\"\n",
+        "filename = \"/content/drive/MyDrive/flicker8k/Flickr_Data/Flickr_TextData/Flickr8k.token.txt\"\n",
         "# loading descriptions\n",
         "doc = load_doc(filename)\n",
         "print(doc[:300])"
       ],
-      "execution_count": 5,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "image,caption\n",
-            "1000268201_693b08cb0e.jpg,A child in a pink dress is climbing up a set of stairs in an entry way .\n",
-            "1000268201_693b08cb0e.jpg,A girl going into a wooden building .\n",
-            "1000268201_693b08cb0e.jpg,A little girl climbing into a wooden playhouse .\n",
-            "1000268201_693b08cb0e.jpg,A little girl climbing\n"
+            "1000268201_693b08cb0e.jpg#0\tA child in a pink dress is climbing up a set of stairs in an entry way .\n",
+            "1000268201_693b08cb0e.jpg#1\tA girl going into a wooden building .\n",
+            "1000268201_693b08cb0e.jpg#2\tA little girl climbing into a wooden playhouse .\n",
+            "1000268201_693b08cb0e.jpg#3\tA little girl climbing the s\n"
           ],
           "name": "stdout"
         }
@@ -113,7 +111,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JOCu-2iXP-zk",
-        "outputId": "bd5de999-553e-4535-d3d0-04d3dde1f23c"
+        "outputId": "a1e2cc0c-32f1-4729-8793-a85495d4458c"
       },
       "source": [
         "def load_descriptions(doc):\n",
@@ -121,8 +119,9 @@
         "\t# processing lines\n",
         "\tfor line in doc.split('\\n'):\n",
         "\t\t# spliting line by white space\n",
-        "\t\ttokens = line.split(',')\n",
-        "\t\t\n",
+        "\t\ttokens = line.split()\n",
+        "\t\tif len(line) < 2:\n",
+        "\t\t\tcontinue\n",
         "\t\t# taking the first token as the image id, the rest as the description\n",
         "\t\timage_id, image_desc = tokens[0], tokens[1:]\n",
         "\t\t# extracting filename from image id\n",
@@ -140,12 +139,12 @@
         "descriptions = load_descriptions(doc)\n",
         "print('Loaded: %d ' % len(descriptions))"
       ],
-      "execution_count": 6,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Loaded: 8093 \n"
+            "Loaded: 8092 \n"
           ],
           "name": "stdout"
         }
@@ -158,28 +157,28 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pnHp9uOIUUv1",
-        "outputId": "c883f763-1aef-429b-b961-4dbc34f6e0c8"
+        "outputId": "38d3d07d-4ca0-4fde-a0d0-216ed6817287"
       },
       "source": [
         "list(descriptions.keys())[10:15]\n"
       ],
-      "execution_count": 7,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "['1015584366_dfcec3c85a',\n",
-              " '101654506_8eb26cfb60',\n",
+              "['101654506_8eb26cfb60',\n",
               " '101669240_b2d3e7f17b',\n",
               " '1016887272_03199f49c4',\n",
-              " '1019077836_6fc9b15408']"
+              " '1019077836_6fc9b15408',\n",
+              " '1019604187_d087bf9a5f']"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 18
         }
       ]
     },
@@ -190,12 +189,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9oybSKGiVAGL",
-        "outputId": "27d4a14d-8113-4910-c0ad-aaec49dfe9ad"
+        "outputId": "88e4297d-f8d2-4f69-cb5e-49db945692fa"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
       ],
-      "execution_count": 8,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -211,7 +210,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 8
+          "execution_count": 19
         }
       ]
     },
@@ -244,7 +243,7 @@
         "# cleaning descriptions\n",
         "clean_descriptions(descriptions)"
       ],
-      "execution_count": 9,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -254,12 +253,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yjgJ7T1oqRTI",
-        "outputId": "3131aaa7-fbea-40f3-b5fc-353e91993399"
+        "outputId": "ab7540bc-23db-433b-d505-4318e7c5ee01"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
       ],
-      "execution_count": 10,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -275,7 +274,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 11
         }
       ]
     },
@@ -286,7 +285,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jr6avM0baElj",
-        "outputId": "442ac908-2bab-4588-e5ec-6119bd7ade07"
+        "outputId": "3b689879-90b3-4196-8e71-d8fba54d9cc5"
       },
       "source": [
         "# converting the loaded descriptions into a vocabulary of words\n",
@@ -331,8 +330,48 @@
         "\n",
         "save_descriptions(descriptions, 'descriptions.txt')"
       ],
-      "execution_count": 14,
+      "execution_count": 20,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "eB4y-bGwsxPs",
+        "outputId": "d9cb5391-7676-4b9a-d2d4-3680fa60d873",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# loading a pre-defined list of photo identifiers\n",
+        "def load_set(filename):\n",
+        "\tdoc = load_doc(filename)\n",
+        "\tdataset = list()\n",
+        "\t# processing line by line\n",
+        "\tfor line in doc.split('\\n'):\n",
+        "\t\t# skiping empty lines\n",
+        "\t\tif len(line) < 1:\n",
+        "\t\t\tcontinue\n",
+        "\t\t# getting the image identifier\n",
+        "\t\tidentifier = line.split('.')[0]\n",
+        "\t\tdataset.append(identifier)\n",
+        "\treturn set(dataset)\n",
+        "\n",
+        "# loading training dataset (6K)\n",
+        "filename = '/content/drive/MyDrive/flicker8k/Flickr_Data/Flickr_TextData/Flickr_8k.trainImages.txt'\n",
+        "train = load_set(filename)\n",
+        "print('Dataset: %d' % len(train))"
+      ],
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Dataset: 6000\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
