path for test and train images are stored in a list

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "automatic image captioning.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPZzz83EmGs6FbmgiB/gNZJ",
+      "authorship_tag": "ABX9TyPJHj1a8X1d5KG117fpBJOG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,9 +60,11 @@
         "import numpy as np\n",
         "from numpy import array\n",
         "import pandas as pd\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import string\n",
+        "import glob"
       ],
-      "execution_count": 2,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -72,7 +74,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "521ba9f3-4615-454c-c184-13d0d74da133"
+        "outputId": "61efced5-1aba-41b4-ff39-7fdd4b577e9a"
       },
       "source": [
         "# loading doc into memory\n",
@@ -90,7 +92,7 @@
         "doc = load_doc(filename)\n",
         "print(doc[:300])"
       ],
-      "execution_count": 15,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -111,7 +113,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JOCu-2iXP-zk",
-        "outputId": "a1e2cc0c-32f1-4729-8793-a85495d4458c"
+        "outputId": "9a551dd2-9e91-478e-8bf2-63877efa4df7"
       },
       "source": [
         "def load_descriptions(doc):\n",
@@ -139,7 +141,7 @@
         "descriptions = load_descriptions(doc)\n",
         "print('Loaded: %d ' % len(descriptions))"
       ],
-      "execution_count": 17,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -157,12 +159,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pnHp9uOIUUv1",
-        "outputId": "38d3d07d-4ca0-4fde-a0d0-216ed6817287"
+        "outputId": "e38a5d97-6d0a-4a66-e059-1877aed77dca"
       },
       "source": [
         "list(descriptions.keys())[10:15]\n"
       ],
-      "execution_count": 18,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -178,7 +180,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 26
         }
       ]
     },
@@ -189,12 +191,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9oybSKGiVAGL",
-        "outputId": "88e4297d-f8d2-4f69-cb5e-49db945692fa"
+        "outputId": "f3a0e4fd-9974-420f-f5b4-d401c8259d78"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
       ],
-      "execution_count": 19,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -210,7 +212,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 19
+          "execution_count": 27
         }
       ]
     },
@@ -220,7 +222,6 @@
         "id": "6-02vbamVQqb"
       },
       "source": [
-        "import string\n",
         "def clean_descriptions(descriptions):\n",
         "\t# preparing translation table for removing punctuation\n",
         "\ttable = str.maketrans('', '', string.punctuation)\n",
@@ -243,7 +244,7 @@
         "# cleaning descriptions\n",
         "clean_descriptions(descriptions)"
       ],
-      "execution_count": 10,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -253,12 +254,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "yjgJ7T1oqRTI",
-        "outputId": "ab7540bc-23db-433b-d505-4318e7c5ee01"
+        "outputId": "eab26c97-65d1-485d-a691-f20ae822d91f"
       },
       "source": [
         "descriptions['101654506_8eb26cfb60']"
       ],
-      "execution_count": 11,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -274,7 +275,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 11
+          "execution_count": 29
         }
       ]
     },
@@ -285,7 +286,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jr6avM0baElj",
-        "outputId": "3b689879-90b3-4196-8e71-d8fba54d9cc5"
+        "outputId": "e297a921-c459-42ff-9bc2-6b83f2e6e5ef"
       },
       "source": [
         "# converting the loaded descriptions into a vocabulary of words\n",
@@ -300,12 +301,12 @@
         "vocabulary = to_vocabulary(descriptions)\n",
         "print('Original Vocabulary len: %d' % len(vocabulary))"
       ],
-      "execution_count": 12,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Original Vocabulary len: 8764\n"
+            "Original Vocabulary len: 8763\n"
           ],
           "name": "stdout"
         }
@@ -330,17 +331,17 @@
         "\n",
         "save_descriptions(descriptions, 'descriptions.txt')"
       ],
-      "execution_count": 20,
+      "execution_count": 31,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eB4y-bGwsxPs",
-        "outputId": "d9cb5391-7676-4b9a-d2d4-3680fa60d873",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "eB4y-bGwsxPs",
+        "outputId": "d9cb5391-7676-4b9a-d2d4-3680fa60d873"
       },
       "source": [
         "# loading a pre-defined list of photo identifiers\n",
@@ -372,6 +373,95 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HZr9Mtm2nAw7"
+      },
+      "source": [
+        "# Below path contains all the images\n",
+        "images = '/content/drive/MyDrive/flicker8k/Flickr_Data/Images/'\n",
+        "# Creating a list of all image names in the directory\n",
+        "img = glob.glob(images + '*?.jpg')"
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Bh7yTRrXrqLH"
+      },
+      "source": [
+        "img"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "qtrmNlqosRE2"
+      },
+      "source": [
+        "# Below file conatains the names of images to be used in train data\n",
+        "train_images_file = '/content/drive/MyDrive/flicker8k/Flickr_Data/Flickr_TextData/Flickr_8k.trainImages.txt'\n",
+        "# Reading the train image names in a set\n",
+        "train_images = set(open(train_images_file, 'r').read().strip().split('\\n'))\n",
+        "\n",
+        "# Creating a list of all the training images with their full path names\n",
+        "train_img = []\n",
+        "\n",
+        "for i in img: # img is list of full path names of all images\n",
+        "    if i[len(images):] in train_images: # Checking if the image belongs to training set\n",
+        "        train_img.append(i) # Adding it to the list of train images"
+      ],
+      "execution_count": 40,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-SyrtFsExcXm"
+      },
+      "source": [
+        "train_img"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "mJKG9O0_x1Vy"
+      },
+      "source": [
+        "# Below file conatains the names of images to be used in test data\n",
+        "test_images_file = '/content/drive/MyDrive/flicker8k/Flickr_Data/Flickr_TextData/Flickr_8k.testImages.txt'\n",
+        "# Read the validation image names in a set# Read the test image names in a set\n",
+        "test_images = set(open(test_images_file, 'r').read().strip().split('\\n'))\n",
+        "\n",
+        "# Create a list of all the test images with their full path names\n",
+        "test_img = []\n",
+        "\n",
+        "for i in img: # img is list of full path names of all images\n",
+        "    if i[len(images):] in test_images: # Check if the image belongs to test set\n",
+        "        test_img.append(i) # Add it to the list of test images"
+      ],
+      "execution_count": 42,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "tFge2C-ayAfT"
+      },
+      "source": [
+        "test_img"
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
